# comp1100-2024s1-ass1

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  comp1100-assignment1.cabal
app/: Main.hs
src/: Controller.hs  Model.hs  View.hs
test/: ShapesTest.hs  Testing.hs
