name:                comp1100-assignment1
version:             0.1.0.1
homepage:            https://comp.anu.edu.au/courses/comp1100/
author:             Tony Hosking, Ranald Clouston
maintainer:         ranald.clouston@anu.edu.au
copyright:           2024 The Australian National University
category:            Education
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://gitlab.cecs.anu.edu.au/comp1100/comp1100-assignment1.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , codeworld-api >= 0.8.0
                     , text
  exposed-modules:     Controller
                     , Model
                     , View
  ghc-options:         -Wall -fno-warn-type-defaults

executable shapes
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , codeworld-api
                     , comp1100-assignment1
                     , text
  ghc-options:         -Wall -threaded -fno-warn-type-defaults

test-suite shapes-test
  type:                exitcode-stdio-1.0
  main-is:             ShapesTest.hs
  other-modules:       Testing
  build-depends:       base
                     , codeworld-api
                     , text
                     , comp1100-assignment1
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
